added full logic
